- added tw
  - waves, measurements
  - step control
- added "math probes" (preliminary, stupid)
- allow inf as double value (hack), breaks i.* as variable name
   FIXME: use constant parameters (?)
- added ADP_CARD. not of any use.
- added sim commmand, time-as-parameter (hack?)
- added command history (incomplete)
- allow parameters as probe (HACK)
      ( almost: expressions like {a+v(foo)} )
- repaired sweep for batchmode. 
    uses parameters, breaks interactive mode sweep (?)
    also takes parameters.
    no nesting yet
- make output easier to parse for gnuplot (^* for non-data-lines)
- added options:
  - printrejected simplifies figuring out rejects.
  - some tolarance values (tt)
  - new option includepath (colon separated)
- load/attach makes use of includepath
- powerof from gnucap-a merged
- fixed measurements to return double (not string)
   ( if strings are needed, templates should be used ?)
- fixed OMSTREAM to support multiple files. (used in tt)
- .echo command
- read $PWD/.gnucaprc on startup (otherwise read ~/.gnucaprc)
- rudimentary .vdump .vload support
- propagate error ( return from main )
- switched to automake dependencies (good idea? might break modelgen stuff)
- icarus verilog interfacing device.
- hacked TRANSIENT:
  - last step handler added
  - moved clear-queue loop to accept()
- internal subckt nodes accessible for probes
  - added .nodelist command
- converted io_trace to use streams
- hacked measurements to allow instanciation etc.
- templatized OMSTREAM::operator<<
- added members to BSMATRIX:
   - real, imaginary part
   - matrix-vector multiplication
   - some stream::operator<<
   - minor stuff
- precalc etc. for measurement probes
- subckt nodes accessible via .probe
- s_ddc.cc: dynamic dc simulation
- debug helpers in c_debug.cc
- header/supplement for ivl tgt-gc output
- logic node analog transitions delayed
- added line eater for verilog parser.
- added socket remote controlled simulation
- added admst hicum0 and ota_simple