@@ -1,0 +1,81 @@
+* Fucap 2011.02.24
+* Copyright 2009-2011 Felix Salfelder
+* derived from
+* Gucap
+* Copyright 1982-2009, Albert Davis
+* Gnucap comes with ABSOLUTELY NO WARRANTY
+* This is free software, and you are welcome
+* to redistribute it under the terms of 
+* the GNU General Public License, version 3 or later.
+* See the file "COPYING" for details.
+* AND check. 
+
+*Time       v(nin)     v(nout)    logic(nin) v(ndd)    
+ 0.         0.         0.         0.01       3.        
+ 1.p        0.         0.         0.01       3.        
+ 2.p        0.         0.         0.01       3.        
+ 3.p        0.         0.         0.01       3.        
+ 5.p        0.         0.         0.01       3.        
+ 7.p        0.         0.         0.01       3.        
+ 10.p       0.         0.         0.01       3.        
+ 15.p       0.         0.         0.01       3.        
+ 20.p       0.         0.         0.01       3.        
+ 25.p       0.         0.         0.01       3.        
+ 30.p       0.         0.         0.01       3.        
+ 35.p       0.         0.         0.01       3.        
+ 40.p       0.         0.         0.01       3.        
+ 45.p       0.3        0.         0.01       3.        
+ 50.p       0.6        0.         0.01       3.        
+ 55.p       0.9        0.         1.01       3.        
+ 60.p       1.2        0.         1.01       3.        
+ 65.p       1.5        0.         1.01       3.        
+ 70.p       1.8        0.         1.01       3.        
+ 75.p       2.1        0.         1.01       3.        
+ 80.p       2.4        0.         3.01       3.        
+ 85.p       2.7        0.         3.01       3.        
+ 90.p       3.         0.         3.01       3.        
+ 95.p       3.         0.         3.01       3.        
+ 100.p      3.         0.         3.01       3.        
+ 105.p      3.         0.         3.01       3.        
+ 110.p      3.         0.         3.01       3.        
+ 115.p      3.         0.         3.01       3.        
+ 120.p      3.         0.         3.01       3.        
+ 125.p      3.         0.10704    3.01       3.        
+ 130.p      3.         0.53518    3.01       3.        
+ 135.p      3.         0.96332    3.01       3.        
+ 140.p      3.         1.3915     3.01       3.        
+ 145.p      2.7        1.8196     3.01       3.        
+ 150.p      2.4        2.2478     3.01       3.        
+ 155.p      2.1        2.6759     2.01       3.        
+ 160.p      1.8        2.997      2.01       3.        
+ 165.p      1.5        2.997      2.01       3.        
+ 170.p      1.2        2.997      2.01       3.        
+ 175.p      0.9        2.997      2.01       3.        
+ 180.p      0.6        2.997      0.01       3.        
+ 185.p      0.3        2.997      0.01       3.        
+ 190.p      8.f        2.997      0.01       3.        
+ 195.p     -1.f        2.997      0.01       3.        
+ 197.5p    -1.f        2.997      0.01       3.        
+ 200.p     -1.f        2.997      0.01       3.        
+ 202.5p    -1.f        2.997      0.01       3.        
+ 205.p     -1.f        2.997      0.01       3.        
+ 210.p     -1.f        2.997      0.01       3.        
+ 215.p     -1.f        2.997      0.01       3.        
+ 220.p     -1.f        2.997      0.01       3.        
+ 225.p     -1.f        2.89       0.01       3.        
+ 230.p     -1.f        2.4618     0.01       3.        
+ 235.p     -1.f        2.0337     0.01       3.        
+ 240.p      9.f        1.6055     0.01       3.        
+ 245.p      0.3        1.1774     0.01       3.        
+ 250.p      0.6        0.74925    0.01       3.        
+ 255.p      0.9        0.32111    1.01       3.        
+ 260.p      1.2        0.         1.01       3.        
+ 265.p      1.5        0.         1.01       3.        
+ 270.p      1.8        0.         1.01       3.        
+ 275.p      2.1        0.         1.01       3.        
+ 280.p      2.4        0.         3.01       3.        
+ 285.p      2.7        0.         3.01       3.        
+ 290.p      3.         0.         3.01       3.        
+ 295.p      3.         0.         3.01       3.        
+ 300.p      3.         0.         3.01       3.        
+destroying expector.
