@@ -54,3 +54,4 @@
 - added line eater for verilog parser.
 - added socket remote controlled simulation
 - added admst hicum0 and ota_simple
+- added expect command (reads output file) for testing.
